# gpur

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
pkg/alpine/: APKBUILD.in
pkg/aur/: PKGBUILD-bin.in
pkg/homebrew/: gpur.rb.in
pkg/scoop/: gpur.json.in
src/: app.rs  art.txt  cli.rs  config.rs  keys.rs  main.rs  splash.rs  theme.rs  ui.rs
src/backend/: amd.rs  apple.rs  intel.rs  linux.rs  mock.rs  mod.rs  nvidia.rs  replay.rs  windows.rs
tests/: smoke.rs  tui.rs
