[package]
name = "gpur"
version = "0.1.0"
edition = "2024"
description = "btop-style GPU monitor TUI — NVIDIA, AMD, Apple Silicon; Linux, macOS, Windows"
license = "MIT"
repository = "https://github.com/kryptic-sh/gpur"
keywords = ["gpu", "monitor", "tui", "nvtop", "btop"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
hjkl-config = "0.33"
hjkl-keymap = "0.33"
hjkl-keymap-tui = "0.33"
hjkl-kitty = "0.33"
hjkl-splash = "0.33"
hjkl-theme = "0.33"
hjkl-theme-tui = "0.33"
nvml-wrapper = "0.12"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
io-kit-sys = "0.5"
libc = "0.2"

[target."cfg(windows)".dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Performance", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common"] }
