[package]
name = "gpur"
version = "0.5.0"
edition = "2024"
description = "btop-style GPU monitor TUI — NVIDIA, AMD, Apple Silicon; Linux, macOS, Windows"
license = "MIT"
repository = "https://github.com/kryptic-sh/gpur"
keywords = ["gpu", "monitor", "tui", "nvtop", "btop"]
categories = ["command-line-utilities"]

[package.metadata.deb]
maintainer = "mxaddict <mxaddict@kryptic.sh>"
copyright = "2026, mxaddict <mxaddict@kryptic.sh>"
extended-description = "btop-style GPU monitor for the terminal. NVIDIA, AMD, and Apple GPUs on Linux, macOS, and Windows."
section = "utils"
priority = "optional"
assets = [
  ["target/release/gpur", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/gpur/README.md", "644"],
  ["LICENSE", "usr/share/doc/gpur/LICENSE", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/gpur", dest = "/usr/bin/gpur", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/gpur/README.md", mode = "644", doc = true },
  { source = "LICENSE", dest = "/usr/share/licenses/gpur/LICENSE", mode = "644", doc = true },
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
crossterm = "0.29"
hjkl-config = "0.33"
hjkl-keymap = "0.33"
hjkl-keymap-tui = "0.33"
hjkl-kitty = "0.33"
hjkl-splash = "0.33"
hjkl-theme = "0.33"
nvml-wrapper = "0.12"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
io-kit-sys = "0.5"
libc = "0.2"

[target."cfg(windows)".dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Performance", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common"] }

[target."cfg(unix)".dependencies]
signal-hook = "0.4"

[dev-dependencies]
portable-pty = "0.9"
serde_json = "1.0.150"
vt100 = "0.16"
